# learn-opengl

./: CMakeLists.txt  bench_01.gltf  build.sh
assets/: bench.glb  bench_01.gltf
include/: dev_utils.h  math_3d.c  math_3d.h
notes/: README.md  shaders.md
res/assets/: bench.gltf  bench_01.glb
res/shaders/: fragment.glsl
shaders/: vertex.glsl
src/: app  cube  cube.cpp  game  game.cpp  game01.cpp  kmain  learn  learn.cpp  main.cpp  my_program  platform  platformer.cpp  pong  pong.cpp  render_model.cpp  triangle  window
src/k/: cube  cube.cpp  sdl_glew_opengl  shader.h  shader_setup.cpp  trig  trig.cpp  window.cpp
template/: build.sh  cube.cpp  land.cpp  main.cpp  myapp  ogl_app  tiny_glade
template/res/shaders/: fragment.glsl  vertex.glsl
theme_launcher/: CMakeLists.txt
theme_launcher/shaders/: basic.frag  basic.vert
theme_launcher/src/: app  main.cpp  mat4.h
